# betfriendagent

./: .env.example  CLAUDE.md  betfriendagent.txt  pyproject.toml  requirements.txt
.github/workflows/: bootstrap.yml  daily-fixtures.yml  post-game.yml  pre-game-check.yml  test-pre-game.yml
betfriend/analysis/: cards.py
betfriend/api/: budget.py  client.py
betfriend/config/: settings.py
betfriend/db/: store.py
betfriend/jobs/: bootstrap.py  daily_fixtures.py  post_game.py  pre_game_check.py  test_pre_game.py
betfriend/notifications/: formatter.py  image.py  telegram.py
betfriend/scrapers/: coaches.py  news.py  rfef_pdf.py
